Edit PinchFun and Music in Projects

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         Hello! I'm ChiaYu, an HCI enthusiast, user researcher, interaction designer, and sometimes developer - Yes I'm a happy hybrid.
       </h1>
       <p>
-        My passion lies in understanding human and constructing experience between human and technologies. My past projects fall across technologies for children and family, intelligent system, music streaming service, wearable haptic technology, and manufacturing.
+        My passion lies in understanding human,  constructing experience between human and technologies, and empowering human with their instinct.
       </p>
       <p>
         <a href="#portfolio">Explore my portfolio</a> or <a href="chiayuchen_resume.pdf" target="_blank">View my résumé</a> to get an overall sense. <br/>
@@ -158,7 +158,7 @@
       </h2>
       
       <a href="pinchfun" class="project pinchfun first-item">
-        <div class="project-name">Designing a child-parent cooperative game for fine motor skills training</div>
+        <div class="project-name">PinchFun: Designing a child-parent cooperative game for fine motor skills training</div>
         <div class="project-role">User Research, Interaction Design, Prototyping
         </div>
         <div class="project-cta">View Case Study</div>
@@ -282,17 +282,18 @@
         With a dual education background in business and human-computer interaction (HCI), internship experience in UX consultancy as a UX researcher and in software industry as a web developer, <b>I'm a happy hybrid who can do research, interaction design, code, and think in business.</b> I enjoy working collaboratively with interdisciplinary teams and bridging human-centered design with business strategy and technologies.
       </p>
       <p>
-        <b>As a researcher,</b> I identify the problem by engaging user and adopting flexible research methods to unveil human need, analyze and share the research insights with the team. <b>As an interaction designer,</b> I make the technology delightful and intuitive with user in mind, iteratively design and build physical/digital prototypes, and test with the real user.
+        I'm passionate about always learning from people, unveiling their stories and need. I enjoy that our team quickly turn the design ideas into protypes, test with real people with the assumptions in mind, to build the technology delightful and more accessible to people.
       </p>
       <p>
         Based and grew up in Báng-kah, Taiwan, I always fancy observing and interacting with people from a different culture and of different ages. Since junior high, I self-learned to code and became much interested in programming, for it enables me to build ideas into visual programs and play with the data as I explored math. Later in college, I developed interests in creating technology arts and digital design and found my passion deeply lies in HCI; therefore, I joined Innovative User Interface Lab at National Chengchi University, where I dived into HCI research and crafted technologies from now to future. <b>There's a human researcher in me at work and beyond work.</b>  I'm keenly passionate in observing human-human & human-artifact interaction and understanding the flux in between.
       </p>
       <p>
-        <h3>Things I love ❤️ </h3>
-        <ul>
+        <h3>Things I love</h3>
+        <ul style="padding: 0">
           <li>🖐️ Bake tangible & Intangible things
             <ul>
               <li>👥 💭 play around in hackathon and workshops, share thoughts, bake ideas into solid prototypes</li>
+              <li>🔧🌍 fix things, reuse the daily materials</li>
               <li>🍰 🍳 bake desserts and make Taiwanese/Japanese cuisine</li>
               <li>👻 🎵 listen and play with experimental music </li>
             </ul>
@@ -300,7 +301,6 @@
           <li>🏃 Running my favorites trails, exploring new areas running and biking 🚲</li>
           <li>📷 Film photography w/ my oldie Minolta. wisdom from ancient objects</li>
           <li>✍️ Write poems and narratives, record daily observation/inspiration and preserve stories</li>
-          <li>🐈 Cuddle with <a href="https://www.instagram.com/explore/tags/orangtherapper/" target="_blank">my cat Orang</a></li>
         </ul>
       </p>
     </section>
@@ -327,7 +327,7 @@
              <li>
               <div class="affiliation">Mobile and Ubiquitous Interaction Lab, National Chiao Tung University</div>
               <div class="location">Hsinchu, Taiwan</div>
-              <div class="duration">May 2018 - Feb 2019</div>
+              <div class="duration">May 2018 - Present</div>
             </li>
             <li>
               <div class="affiliation">Innovative User Interface Lab, National Chengchi University</div>
@@ -345,7 +345,7 @@
         </li>
       </ul>
       <ul class="about-column">
-        <h4>Education and Activities</h4>
+        <h4>Education</h4>
         <li class="experience">
           <div class="role">M.S. in Digital Contents (specialized in HCI)</div>
           <div class="affiliation">National Chengchi University</div>
@@ -361,16 +361,7 @@
           <div class="location">Taipei, Taiwan</div>
           <div class="duration">Sep 2011 - Jun 2015</div>
         </li>        
-        <li class="experience">
-          <div class="role">OpenHCI Committee Member</div>
-          <div class="affiliation"><a href="http://openhci.com" target="_blank">OpenHCI Workshop</a></div>
-          <div class="location">Taipei, Taiwan</div>
-          <div class="duration">
-          Feb - Aug 2015 (Lecture & Tech)<br />
-          Feb - Aug 2016 (Marketing & Publicity)<br />
-          Feb - Aug 2017 (Steering)</div>
-        </li>
-      </ul>   
+      </ul>
       <ul class="about-column">
         <h4>Publication</h4>
         <li class="experience">
@@ -416,14 +407,48 @@
         </li>
       </ul>
       <ul class="about-column">
+        <h4>Activities and Volunteering</h4>
+        <li class="experience">
+          <div class="role">Writer Volunteer</div>
+          <div class="affiliation"><a href="https://www.facebook.com/wanhuaxiaoxiao/" target="_blank">Wiki for Hometown (為家鄉寫維基)</a></div>
+          <div class="duration">Mar 2019 - Present</div>
+        </li>
+        <li class="experience">
+          <div class="role">Translator/Interview Volunteer</div>
+          <div class="affiliation"><a href="http://www.poly.tw" target="_blank">Polyamory Taiwan</a>
+          <div class="duration">Nov 2018 - Present</div></div>
+        </li>
+        <li class="experience">
+          <div class="role">OpenHCI Committee Member</div>
+          <div class="affiliation"><a href="http://openhci.com" target="_blank">Open HCI Workshop</a></div>
+          <div class="duration">
+          Feb - Aug 2015 (Lecture & Tech)<br />
+          Feb - Aug 2016 (Marketing & Publicity)<br />
+          Feb - Aug 2017 (Steering)</div>
+        </li>
+        <li class="experience">
+          <div class="role">Student Volunteer</div>
+          <div class="affilation"><a href="https://chi2018.acm.org/" target="_blank">ACM CHI 2018</a></div>
+          <div class="location">Montréal, Canada</div>
+          <div class="duration">Apr 2018</div>
+          <div class="affiliation"><a href="http://taichi2018.nctu.edu.tw/" target="_blank">Taiwan CHI (TaiCHI)</a></div>
+          <div class="duration">Aug 2018 & Aug 2016</div>
+        </li>
+        <li class="experience">
+          <div class="role">Exhibition Docent Volunteer</div>
+          <div class="affiliation">IxDA Taiwan x Continuum, <a href="http://wdc2016.taipei/%E5%9C%8B%E9%9A%9Bopencall-taste-safety-taste-home-%E9%A3%9F%E5%9C%A8%E5%AE%89%E5%BF%83%EF%BC%8C%E5%AE%B6%E7%9A%84%E5%91%B3%E9%81%93/" target="_blank">World Design Capital 2016</a></div>
+          <div class="duration">Oct 2016</div>
+        </li>
+      </ul>
+      <ul class="about-column">
         <h4>Awards</h4>
         <li class="experience">
           <div class="award">
             1st Place, 
             <span class="award-title">2017 - 104 Open Data Hackathon, Mobile App & Web Service</span>
-            <div>
+          </div>
+          <div>
               <a href="https://plus.104.com.tw/activity/2410f393-37ce-4292-8b4f-e48f03c0bc89" class="button" target="_blank">Press Article</a>
-            </div>
           </div>
         </li>
         <li class="experience">
