--- a/music/index.html
+++ b/music/index.html
@@ -38,7 +38,7 @@
   <body>
     <nav>
       <a id="home" href="../pinchfun">
-        <div id="home-title">← Last Project: Child</div>
+        <div id="home-title">← Last: PinchFun</div>
       </a>
       <a id="next" href="../#portfolio">
         <div id="home-title">Home →</div>
@@ -50,17 +50,17 @@
         Design for better music listening experience on mobile
       </h1>
       <div class="progress-bar"></div>
-      <figure class="mobile-app">
-        <img src="music-app.gif" alt="Music player">
-      </figure>
       <p>
         #online music streaming #mobile UX
       </p>
+      <figure class="mobile-app">
+        <img src="music-app.gif" alt="Music player">
+      </figure>
       <h3 class="logistics">Project Logistics</h3>
       <p>
         <ul>
           <li>My Role: User research, UX design, prototyping & testing</li>
-          <li>Team: Ricky Yu, Evie Cheng, Frank Weng, Chenhsin Lee <br/>(1 Research Lead, 1 Researcher, 1 Designer, and 1 UX intern)</li>
+          <li>Team: 1 Research Lead, 1 Researcher, 1 Designer, and 1 UX intern</li>
           <li>Client: Confidential (Music streaming service provider)</li>
         </ul>
       </p>
@@ -82,7 +82,7 @@
           I closely assisted the UX Research Lead to conduct the user research and testing sessions to understand users’ behavior and thoughts about the music streaming services, before analyzed research data, compiled the results and shared the research findings and insights with the stakeholders, to provided recommendations and supported evidence-based decisions for the client.
         </li>
         <li>
-          We’ve held a few co-creation workshops to work with the clients’ product core team, to align the project goal, clarify their business strength/weakness, and understand their assumptions of the users and the product. These also acted as a step to bring in the UCD mindset to the client team, which did affect them to create the product with user's voice in mind.
+          We’ve planned and held a few co-creation workshops to work with the clients’ product core team, to align the project goal, clarify their business strength/weakness, and understand their assumptions of the users and the product. These also acted as a step to bring in the UCD mindset to the client team, which did affect them to create the product with user's voice in mind.
         </li>
         <li>
           We designed a more intuitive user flows based on the research and two design iterations, and delivered a detailed flowchart and wireframes for designers in the client team to work on UI/visual design.
@@ -100,8 +100,9 @@
     <section>
       <h2>Building Empathy: Understanding Users</h2>
       <p class="research-question">How do we design a better music listening experience on mobile? </p>
-      <p>To help the client better understand the users of mobile music product and their need, we conducted 10+ semi-structured interviews and a guerrilla street interview, to understand the users' lifestyle, how they use different music products, and what role music plays in their daily life. We also ask the users to finish several tasks using the original mobile APP, to gather the usability feedback of the current APP. The client team was also invited to participate in the interviews.</p>
-      <p>Afterward, we did an affinity diagramming to analyze the data. Some of the key findings are:
+      <p>To help the client better understand the users of mobile music product and their need, we conducted 10+ semi-structured interviews and a guerrilla street interview, to understand the users' lifestyle, how they use different music products, and what role music plays in their daily life.</p>
+      <p>We asked the users to finish several tasks they would normally do using the original mobile APP, e.g., edit playlists, search, play a song, save a song, to gather the usability feedback of the current APP. At this stage, we also helped client to ideate some product ideas they've got in mind and to preliminarily validate these features, using the lo-fidelity wireframes. The client team was also invited to participate in the interviews.</p>
+      <p>We did an affinity diagramming to analyze the data. Some of the key findings are:
       <ul>
         <li>A user does not care how many songs the platform provides; They only care if they can find the song they want.</li>
         <li>Their music listening habits in the old times (e.g., CDs, MP3, Cassettes) affect how they use the online streaming service.
@@ -115,6 +116,10 @@
       <figure>
         <img src="1_affinity_diagram.png" alt="Affinity diagramming">
         <figcaption>We did an affinity diagramming from the interview data to synthesize the research findings.</figcaption>
+      </figure>
+      <figure>
+        <img src="0_lo_fi_concept.png" alt="Blurred wireframes">
+        <figcaption>We also tested some product feature concepts with these users to gather the preliminary feedback.</figcaption>
       </figure>
       
       </p>
